tdf#149692 crash importing document with vba forms

This bug appears to date back to
    commit a43cc9ec8dde4f311bcf8ff96e6a26d56b2abdcf
    Author: Noel Power <noel.power@suse.com>
    Date:   Wed Apr 17 17:08:59 2013 +0100
    implement MultiPage, Page & TabStrip import for oox

Change-Id: Ia4784e4c34189f05e516704fa2e2485e4560fa4b